# retcd

./: .gitignore  Cargo.toml  Dockerfile  README.md  design.excalidraw
cmd/retcd-server/: Cargo.toml
cmd/retcd-server/src/: main.rs
src/: lib.rs  main.rs
src/backend/: backend.rs
src/embed/: config.rs  mod.rs  retcd.rs  util.rs
src/etcd/: etcd.rs
src/mvcc/: hash.rs  mod.rs  revision.rs
src/mvcc/backend/: backend.rs
src/mvcc/backends/: backend.rs  mod.rs
src/mvcc/buckets/: bucket.rs
src/retcdmain/: config.rs  mod.rs  retcd.rs
src/retcdserver/: server.rs
src/storage/wal/: util.rs
