[package]
name = "retcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.8.0"
clap = "4.4.6"
pnet = "0.34.0"