[package]
name = "retcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.8.0"
pnet = "0.34.0"
url = "2.4.1"
crossbeam = "0.8.2"